--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,3 @@
 {
-    "redirects": [
-      { "source": "/cta", "destination": "CTA" },
-      { "source": "/sponsor", "destination": "/"},
-      {
-        "source": "/view-source",
-        "destination": "https://github.com/vercel/vercel"
-      }
-    ]
-  }
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+}
