--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
     "react-tilt": "^1.0.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "tailwind": "^4.0.0",
     "vercel": "^29.1.1"
   },
