--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.11.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "redaxios": "^0.5.1",
     "tailwind": "^4.0.0",
     "vercel": "^29.1.1",
     "yup": "^1.1.1"
