--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_SERVER_URL = "https://stockastic23-backend.onrender.com"
+VITE_NEXT_PUBLIC_SERVER_URL="https://stockastic23-backend.onrender.com"
