--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "env": "^0.0.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
