--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "env": "^0.0.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
